[FIX] opacidade do fundo de mapas não dava legibilidades

--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -1,6 +1,18 @@
 .page-home {
-    background: url(../img/background-maps.svg);
-    background-size: contain;
+
+    .background {
+        background: url(../img/background-maps.svg);
+        background-size: contain;
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        right: 0;
+        left: 0;
+        bottom: 0;
+        z-index: -1;
+        opacity: 0.5;
+    }
 
     .padding {
         padding: 10px 20px;
